--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-
 Flask==2.3.2
-Flask-Login==0.6.3
 Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.1.0
+Flask-Migrate==4.0.4
+Flask-Login==0.6.2
+Flask-WTF==1.0.1
+Flask-Cors==3.0.10
 Flask-Caching==2.0.2
-Flask-Compress==1.13
+Flask-Limiter==2.8.1
+sentry-sdk[flask]==1.15.0
+python-dotenv==0.21.0
+SQLAlchemy==1.4.46
+alembic==1.8.1
 Werkzeug==2.3.7
+Jinja2==3.1.2
 WTForms==3.0.1
-Flask-WTF==1.2.2
-APScheduler==3.10.1
-pytest==8.3.5
-pytest-cov==6.1.1
-colorama==0.4.6
-python-dotenv==1.0.0
+pytest==7.2.2
+coverage==7.2.2
