modified:   .coverage 	modified:   app/__init__.py 	modified:   init_db.py 	modified:   pytest.ini 	modified:   requirements.txt 	new file:   tests/TestReporter.py 	new file:   tests/conftest.py 	new file:   tests/test_models.py 	modified:   tests/test_routes.py 	new file:   tests/test_services.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
-filterwarnings =
-    ignore::DeprecationWarning:flask_login.utils:
+testpaths = tests
+python_files = test_*.py
+python_functions = test_*
+addopts = --cov=app --cov-report=term-missing --color=yes
