--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.4
-Flask-Login==0.6.2
-Flask-WTF==1.0.1
-Flask-Cors==3.0.10
-Flask-Caching==2.0.2
-Flask-Limiter==2.8.1
-sentry-sdk[flask]==1.15.0
-python-dotenv==0.21.0
-SQLAlchemy==1.4.46
-alembic>=1.9.0
-Werkzeug==2.3.7
-Jinja2==3.1.2
-WTForms==3.0.1
-pytest==7.2.2
+Flask>=2.4.0
+Flask-SQLAlchemy>=3.1.0
+Flask-Migrate>=4.0.5
+Flask-Login>=0.6.3
+Flask-WTF>=1.2.0
+Flask-Cors>=4.0.0
+Flask-Caching>=2.1.0
+Flask-Limiter>=3.0.0
+sentry-sdk[flask]>=1.30.0
+python-dotenv>=1.0.0
+SQLAlchemy>=2.0.0
+alembic>=1.12.0
+Werkzeug>=3.0.0
+Jinja2>=3.1.3
+WTForms>=3.1.0
+pytest>=8.0.0
 coverage[toml]>=7.5.0
