--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,11 @@
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
-addopts = --cov=app --cov-report=term-missing --color=yes
+addopts = 
+    --cov=app 
+    --cov-report=term-missing 
+    --cov-report=html:htmlcov 
+    --cov-report=xml:coverage.xml
+    --color=yes
+    --reruns 2
+    --reruns-delay 1
