modified:   .env.example 	new file:   Dockerfile 	modified:   app/__init__.py 	new file:   app/core/base_crud.py 	modified:   app/decorators.py 	new file:   app/middlewares/error_handler.py 	modified:   app/routes/cats.py 	modified:   coverage.xml 	new file:   docker-compose.yml 	modified:   tests/conftest.py 	new file:   tests/core/test_base_crud.py 	modified:   tests/routes/test_cats.py 	modified:   tests/services/cats/test_cat_service.py

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,56 @@
 # ======================
-# 数据库配置
+# 基础配置
 # ======================
-DATABASE_URL=postgresql://user:password@localhost/catalogue
+FLASK_ENV=development
+FLASK_DEBUG=True
 SECRET_KEY=your-secret-key-here
 
 # ======================
-# 应用配置 
+# 端口配置 (必须与docker-compose.yml一致)
+# ======================
+APP_PORT=5000  # 主应用端口
+TEST_PORT=5001  # 测试端口
+
+# ======================
+# 数据库配置
+# ======================
+# 开发环境使用SQLite
+DATABASE_URL=sqlite:///app.db
+# 生产环境使用PostgreSQL
+# DATABASE_URL=postgresql://user:password@db:5432/catalogue
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+
+# ======================
+# 文件上传配置
+# ======================
+UPLOAD_FOLDER=static/uploads
+MAX_IMAGE_SIZE=5242880  # 5MB
+
+# ======================
+# 分页配置
 # ======================
 ITEMS_PER_PAGE=10
-MAX_UPLOAD_SIZE=5242880  # 5MB
-LOG_LEVEL=INFO
-FLASK_ENV=development
-FLASK_DEBUG=True
+
+# ======================
+# 部署相关配置
+# ======================
+# Gunicorn配置
+WORKERS=4
+TIMEOUT=120
+LOG_LEVEL=info
+
+# 健康检查配置
+HEALTHCHECK_TIMEOUT=30
+HEALTHCHECK_RETRIES=3
 
 # ======================
 # 邮件配置
-# ====================== 
+# ======================
 MAIL_SERVER=smtp.example.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=your-email@example.com
 MAIL_PASSWORD=your-email-password
-
-# ======================
-# 第三方服务配置
-# ======================
-SENTRY_DSN=https://example@sentry.io/123456
-GOOGLE_MAPS_API_KEY=your-google-maps-key
 
 # ======================
 # 功能开关
