modified:   .env.example 	new file:   TEST_COVERAGE_PLAN.md 	modified:   app/core/health_check.py 	modified:   app/extensions.py 	modified:   app/routes/cats.py 	modified:   app/services/cat_service.py 	modified:   coverage.xml 	modified:   pytest.ini 	modified:   requirements.txt 	modified:   tests/core/test_base_crud.py 	modified:   tests/core/test_health_check.py 	modified:   tests/routes/test_cats.py 	modified:   tests/services/cats/test_cat_service.py 	modified:   tests/test_client.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,13 @@
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
+
+markers =
+    service: mark service layer tests
+    cat: mark cat related tests
+    user: mark user related tests
+    route: mark route tests
+    core: mark core functionality tests
 addopts = 
     --cov=app 
     --cov-report=term-missing 
