--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # 基础配置
 # ======================
 FLASK_ENV=development
+REDIS_URL=redis://localhost:6379/0
 FLASK_DEBUG=True
 SECRET_KEY=your-secret-key-here
 
