modified:   app/core/health_check.py 	modified:   app/services/cat_service.py 	modified:   coverage.xml 	modified:   pytest.ini 	modified:   tests/conftest.py 	deleted:    tests/core/test_health_check.py 	modified:   tests/routes/test_cats.py 	renamed:    tests/services/cats/test_cat_service.py -> tests/services/cats/test_cat_crud.py 	new file:   tests/services/cats/test_cat_errors.py 	new file:   tests/services/cats/test_cat_search.py 	new file:   tests/unit/core/test_health_check.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,10 @@ markers =
     user: mark user related tests
     route: mark route tests
     core: mark core functionality tests
+    crud: mark CRUD operation tests
+    search: mark search functionality tests
+    errors: mark error handling tests
+    no_db: mark tests that don't require database
 addopts = 
     --cov=app 
     --cov-report=term-missing 
