--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,43 @@
-[build-system]
-requires = ["setuptools>=42"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "CATalogue"
 version = "1.0.0"
 description = "CATalogue web application"
-requires-python = ">=3.8"
-dependencies = [
-    "flask",
-    "pytest",
-    "pytest-cov"
+authors = ["Your Name <your.email@example.com>"]
+readme = "README.md"
+license = "MIT"
+packages = [
+    { include = "app" }
 ]
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["app*", "tests*"]
-exclude = ["static*", "templates*", "migrations*", "translations*", "uploads*", "logs*", "instance*"]
+[tool.poetry.dependencies]
+python = "^3.10"
+flask = "^2.2.5"
+flask-babel = "^3.1.0"
+flask-cors = "^6.0.1"
+flask-jwt-extended = "^4.7.1"
+flask-limiter = "^3.12"
+flask-login = "^0.6.3"
+flask-migrate = "^4.1.0"
+flask-restx = "^1.3.0"
+flask-sqlalchemy = "^3.1.1"
+flask-wtf = "^1.2.2"
+sqlalchemy = "^2.0.41"
+werkzeug = "^3.1.3"
+jinja2 = "^3.1.6"
+wtforms = "^3.2.1"
+python-dotenv = "^1.1.0"
+apscheduler = "^3.11.0"
+redis = "^4.6.0"
+sentry-sdk = "^2.30.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.0"
+pytest-cov = "^6.2.1"
+pytest-rerunfailures = "^15.1"
+coverage = "^7.9.1"
+faker = "^37.4.0"
+locust = "^2.37.11"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
