--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
   "homepage": "https://github.com/Eric-GoodBoy-Tech/CATalogue#readme",
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0",
-    "@sveltejs/kit": "^1.27.6",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@sveltejs/kit": "^1.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/svelte": "^4.0.3",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitest/ui": "^0.34.3",
     "cross-env": "^10.0.0",
-    "svelte": "^5.37.1",
+    "svelte": "^4.2.0",
     "vite-plugin-pwa": "^1.0.2",
-    "vitest": "^3.2.4"
+    "vitest": "^1.0.0"
+  },
+  "dependencies": {
+    "@vitest/coverage-v8": "^1.0.0",
+    "jsdom": "^26.1.0",
+    "vite": "^4.0.0"
   }
 }
