--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "vite build --mode spa",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "test": "vitest"
@@ -28,11 +28,12 @@
   "homepage": "https://github.com/Eric-GoodBoy-Tech/CATalogue#readme",
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0",
-    "@sveltejs/kit": "^1.0.0",
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@sveltejs/kit": "^2.26.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/svelte": "^4.0.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitest/ui": "^0.34.3",
     "cross-env": "^10.0.0",
@@ -41,8 +42,9 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
+    "@sveltejs/adapter-static": "^3.0.8",
     "@vitest/coverage-v8": "^1.0.0",
     "jsdom": "^26.1.0",
-    "vite": "^4.0.0"
+    "vite": "^5.4.19"
   }
 }
