--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
+asyncio_mode = strict
 
 [coverage:run]
 source = api
@@ -13,4 +14,4 @@ omit =
 [coverage:report]
 show_missing = True
 skip_covered = True
-fail_under = 80
+fail_under = 95
