--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,25 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.9,<4.0"
+packages = [
+    {include = "api"}
+]
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "sqlalchemy (>=2.0.42,<3.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
-    "pydantic[dotenv] (>=2.11.7,<3.0.0)",
+    "pydantic[email] (>=2.11.7,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "psycopg2-binary (>=2.9.9,<3.0.0)",
     "motor (>=3.3.2,<4.0.0)",
     "redis (>=5.0.1,<6.0.0)",
     "bcrypt (>=4.1.2,<5.0.0)",
     "cryptography (>=43.0.0,<44.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)"
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "pytest-mock (>=3.14.1,<4.0.0)"
 ]
 
 
@@ -32,6 +38,7 @@ factory-boy = "^3.3.0"
 mypy = "^1.10.0"
 black = "^24.4.0"
 safety = ">=2.4.1"
+aiosqlite = "^0.21.0"
 
 [tool.poetry]
 packages = [
