--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/svelte": "^4.0.3",
+    "@testing-library/svelte": "^4.2.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@vitest/ui": "^0.34.3",
     "cross-env": "^10.0.0",
@@ -43,7 +44,9 @@
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
+    "@types/echarts": "^4.9.22",
     "@vitest/coverage-v8": "^1.0.0",
+    "echarts": "^6.0.0",
     "jsdom": "^26.1.0",
     "vite": "^5.4.19"
   }
