--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "paths": {
+      "$lib": ["src/lib"],
       "$lib/*": ["src/lib/*"],
-      "$lib/test-adapters": ["src/lib/test-adapters"]
+      "$lib/test-adapters": ["src/lib/test-adapters"],
+      "src/*": ["*"],
+      "*": ["*", "src/*"]
     },
     "allowImportingTsExtensions": true,
     "strict": true,
@@ -16,12 +19,7 @@
     "moduleResolution": "node16",
     "verbatimModuleSyntax": true,
     "types": ["vitest/globals", "@sveltejs/kit", "@testing-library/svelte"],
-    "baseUrl": "src",
-    "paths": {
-      "$lib": ["lib"],
-      "$lib/*": ["lib/*"],
-      "src/*": ["*"]
-    }
+    "baseUrl": "src"
   },
   "include": ["src/**/*", "tests/**/*", "src/svelte.d.ts"]
 }
