--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,6 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
-    "paths": {
-      "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"],
-      "$lib/test-adapters": ["src/lib/test-adapters"],
-      "src/*": ["*"],
-      "*": ["*", "src/*"]
-    },
     "allowImportingTsExtensions": true,
     "strict": true,
     "esModuleInterop": true,
@@ -18,8 +11,7 @@
     "module": "node16",
     "moduleResolution": "node16",
     "verbatimModuleSyntax": true,
-    "types": ["vitest/globals", "@sveltejs/kit", "@testing-library/svelte"],
-    "baseUrl": "src"
+    "types": ["vitest/globals", "@sveltejs/kit", "@testing-library/svelte"]
   },
   "include": ["src/**/*", "tests/**/*", "src/svelte.d.ts"]
 }
